fix run bugs